fixed issue where search box was wrapping during a search because there wasn't enough width to display the search input and spinner on the same line

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -671,7 +671,7 @@ ul#filter {
       display: inline;
       margin: 10px 0 0 0 !important;
       padding: 0 !important;
-      width: 250px;
+      width: 230px;
     }
     img {
       display: none;
@@ -695,7 +695,7 @@ ul#filter {
         border: 1px solid #555555; } } }
   li:last-child {
     margin: 0 !important;
-    width: 180px !important;
+    width: 230px !important;
   }
   li.current {
     span {
@@ -709,7 +709,7 @@ ul#filter, form.search {
     height: 18px;
     margin: 0;
     padding: 5px 6px 5px 10px;
-    width: 210px;
+    width: 190px;
   }
 }
 
